# strava-rs

./: README.md  rust-gen-config.json  strava-api-spec.json  strava-api-spec.patch
example_project/: Cargo.toml
example_project/src/: main.rs
strava_rs/: Cargo.toml  README.md
strava_rs/.openapi-generator/: FILES
strava_rs/docs/: ActivitiesApi.md  ActivityZone.md  AthletesApi.md  ClubsApi.md  DetailedActivity.md  DetailedClub.md  DetailedSegment.md  ExplorerSegment.md  GearsApi.md  HeartRateZoneRanges.md  LatLng.md  LatLngStream.md  LatLngStreamAllOf.md  PowerZoneRanges.md  RoutesApi.md  RunningRace.md  RunningRacesApi.md  SegmentEffortsApi.md  SegmentsApi.md  StreamsApi.md  SummaryActivity.md  SummaryActivityAllOf.md  SummaryClub.md  SummaryClubAllOf.md  SummarySegment.md  TimedZoneDistribution.md  UpdatableActivity.md  UploadsApi.md  ZoneRanges.md
strava_rs/src/apis/: activities_api.rs  athletes_api.rs  clubs_api.rs  configuration.rs  gears_api.rs  mod.rs  routes_api.rs  running_races_api.rs  segment_efforts_api.rs  segments_api.rs  streams_api.rs  uploads_api.rs
strava_rs/src/models/: activity_stats.rs  activity_total.rs  activity_type.rs  activity_zone.rs  altitude_stream.rs  altitude_stream_all_of.rs  base_stream.rs  cadence_stream.rs  cadence_stream_all_of.rs  comment.rs  detailed_activity.rs  detailed_activity_all_of.rs  detailed_athlete.rs  detailed_athlete_all_of.rs  detailed_club.rs  detailed_club_all_of.rs  detailed_gear.rs  detailed_gear_all_of.rs  detailed_segment.rs  detailed_segment_all_of.rs  detailed_segment_effort.rs  distance_stream.rs  lap.rs  (+54 more)
