[package]
name = "example_project"
version = "0.1.0"
authors = ["Strava Developer <run@defy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.16"
hyper = "0.11.6"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
strava-rs = { path = "../strava_rs" }
hyper-tls = "0.1.3"